--- a/modelCsharp/SVSModel/SVSModel.csproj
+++ b/modelCsharp/SVSModel/SVSModel.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="ExcelDna.AddIn" Version="1.6.0" />
     <PackageReference Include="ExcelDna.Integration" Version="1.6.0" />
+    <PackageReference Include="GenericParser" Version="1.1.6" />
+    <PackageReference Include="Microsoft.Data.Analysis" Version="0.20.0" />
 	<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="all">
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
