add resource to outputs

--- a/modelCsharp/SVSModel/SVSModel.csproj
+++ b/modelCsharp/SVSModel/SVSModel.csproj
@@ -24,7 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Data\CropCoefficientTableFull.csv" />
+    <EmbeddedResource Include="Data\CropCoefficientTableFull.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
