Trying to get distribution working

--- a/modelCsharp/SVSModel/SVSModel.csproj
+++ b/modelCsharp/SVSModel/SVSModel.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net4.8-windows</TargetFramework>
+    <TargetFramework>net48</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,9 +9,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Deedle" Version="3.0.0" />
-    <PackageReference Include="ExcelDna.AddIn" Version="1.6.0" />
-    <PackageReference Include="ExcelDna.Integration" Version="1.6.0" />
+    <EmbeddedResource Include="Data\CropCoefficientTableFull.csv" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ExcelDna.AddIn" Version="1.6.1-beta3" />
     <PackageReference Include="GenericParser" Version="1.1.6" />
     <PackageReference Include="Microsoft.Data.Analysis" Version="0.20.0" />
 	<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="all">
@@ -21,27 +23,18 @@
 	  <PrivateAssets>all</PrivateAssets>
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
+	<PackageReference Include="System.Reflection.MetaData" Version="6.0.0" />
+	<PackageReference Include="System.Reflection.TypeExtensions" Version="4.7.0" />
   </ItemGroup>
+  
+  <Target Name="PackedReferences" AfterTargets="AfterBuild" BeforeTargets="ExcelDnaBuild">
+    <ItemGroup>
+      <References Include="$(OutDir)*.dll" Exclude="$(OutDir)$(TargetFileName)" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Include="Data\CropCoefficientTableFull.csv">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="Properties\Resources.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Update="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
+    <PropertyGroup>
+      <ExcelAddInInclude>@(References)</ExcelAddInInclude>
+    </PropertyGroup>
+  </Target>
 
 </Project>
