--- a/.github/workflows/build-solution.yml
+++ b/.github/workflows/build-solution.yml
@@ -5,7 +5,7 @@ name: build solution
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "*" ]
   pull_request:
     branches: [ "master" ]
 
