--- a/modelCsharp/SVSModel.Excel/SVSModel.Excel.csproj
+++ b/modelCsharp/SVSModel.Excel/SVSModel.Excel.csproj
@@ -5,6 +5,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="DynamicLanguageRuntime" Version="1.3.4" />
 		<PackageReference Include="ExcelDna.AddIn" Version="1.7.0-rc1" />
 		<PackageReference Include="GenericParser" Version="1.1.6" />
 		<PackageReference Include="Microsoft.Data.Analysis" Version="0.20.0" />
