--- a/modelCsharp/WinFormsSVS-test/WinFormsSVS-test.csproj
+++ b/modelCsharp/WinFormsSVS-test/WinFormsSVS-test.csproj
@@ -10,6 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DynamicLanguageRuntime" Version="1.3.4" />
+    <PackageReference Include="ServiceStack.Text" Version="6.10.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\TestModel\TestModel\TestModel.csproj" />
   </ItemGroup>
 
